<resources>
    <string name="app_name">Guia Investimento</string>
    <string name="sans_serif_light" untranslateable="true">sans-serif-light</string>
    <string name="refresh_done">Portfolio updated successfully</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="loading_ad">Please wait, Ad is loading!</string>
    <string name="stock_update_success">Stock updated successfuly</string>
    <string name="stock_update_fail">Stock update failed</string>
    <string name="fii_update_success">Fii updated successfuly</string>
    <string name="fixed_update_success">Fixed income updated successfuly</string>
    <string name="fund_update_success">Funds updated successfuly</string>
    <string name="others_update_success">Updated successfuly</string>
    <string name="treasury_update_success">Treasury updated successfuly</string>
    <string name="fii_update_fail">Fii update failed</string>
    <string name="fixed_update_fail">Fixed income update failed</string>
    <string name="fund_update_fail">Funds update failed</string>
    <string name="others_update_fail">Update failed</string>
    <string name="treasury_update_fail">Treasury update failed</string>
    <string name="currency_update_success">Currency updated successfuly</string>
    <string name="currency_update_fail">Currency update failed</string>
    <string name="form_title_buy">Buy</string>
    <string name="form_title_sell">Sell</string>
    <string name="form_title_objective">Objective</string>
    <string name="form_title_dividend">Dividend</string>
    <string name="form_title_jcp">Interest on Capital</string>
    <string name="form_title_fii_income">Income</string>
    <string name="form_title_fixed_income">Income</string>
    <string name="form_title_fund_income">Income</string>
    <string name="form_title_others_income">Income</string>
    <string name="form_title_treasury_income">Income</string>
    <string name="form_title_bonification">Bonification</string>
    <string name="form_title_split">Split</string>
    <string name="form_title_grouping">Grouping</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price: </string>
    <string name="treaury_quantity_hint">Ex: 1.32</string>
    <string name="buy_price">Buy Price</string>
    <string name="treasury_buy_price">Unit buy price</string>
    <string name="treasury_buy_price_hint">Price paid for each 1.00</string>
    <string name="sell_price">Sell Price</string>
    <string name="stock_current_price">Stock current price</string>
    <string name="fii_current_price">Fii Current Price</string>
    <string name="fixed_current_total">Fixed income current total</string>
    <string name="fund_current_total">Funds current total</string>
    <string name="others_current_total">Current total</string>
    <string name="treasury_current_price">Treasury Current Price</string>
    <string name="currency_current_price">Currency current price</string>
    <string name="percentual_objective">Objective for the portfolio (EX: 20%)</string>
    <string name="stock_edit_tip">*Leave any field empty to not edit it.</string>
    <string name="fii_edit_tip">*Leave any field empty to not edit it.</string>
    <string name="currency_edit_tip">*Leave any field empty to not edit it.</string>
    <string name="treasury_edit_tip">*Leave any field empty to not edit it.</string>
    <string name="buy_date">Buy Date</string>
    <string name="bonification_date">Bonification Date</string>
    <string name="split_date">Stock Split Date</string>
    <string name="split_grouping_numerator">1</string>
    <string name="split_grouping_to">to</string>
    <string name="grouping_date">Stock Grouping Date</string>
    <string name="sell_date">Sell Date</string>
    <string name="ex_date">Ex Dividend Date</string>
    <string name="ex_date_jcp">Ex Interest on Capital Date</string>
    <string name="ex_date_fii_income">Ex Income Date</string>
    <string name="ex_date_treasury_income">Receive Date</string>
    <string name="ex_date_others_income">Receive Date</string>
    <string name="wrong_code">Invalid code</string>
    <string name="wrong_stock_code">Invalid stock code</string>
    <string name="wrong_fii_code">Invalid Fii code</string>
    <string name="wrong_fixed_code">Invalid Fixed Income label. Please type only letters and numbers.</string>
    <string name="wrong_fund_code">Invalid Fund label. Please type only letters and numbers.</string>
    <string name="wrong_fund_cnpj">Invalid Fund CNPJ. Use Ex: 12.345.678/9031-23</string>
    <string name="wrong_others_code">Invalid label. Please type only letters and numbers.</string>
    <string name="wrong_treasury_code">Invalid Treasury label. Please type only letters and numbers.</string>
    <string name="wrong_currency_code">Invalid Currency code</string>
    <string name="wrong_quantity">Quantity should be a number</string>
    <string name="wrong_stock_sell_quantity">Quantity should be a number and need to have enough stock bought</string>
    <string name="wrong_fii_sell_quantity">Quantity should be a number and need to have enough fii bought</string>
    <string name="menu_item_dividends">Dividends</string>
    <string name="menu_item_jcp">Interest on Capital</string>
    <string name="menu_item_bonification">Bonification</string>
    <string name="menu_item_split">Split</string>
    <string name="menu_item_grouping">Grouping</string>
    <string name="portfolio_bought_label">Buys</string>
    <string name="portfolio_current_label">Current</string>
    <string name="portfolio_appreciation_label">Appreciation</string>
    <string name="portfolio_income_label">Incomes</string>
    <string name="portfolio_total_gain_label">Gain</string>
    <string name="stock_symbol">Stock Code</string>
    <string name="stock_symbol_hint">Ex: PETR4</string>
    <string name="fii_symbol">Real State Fund Code</string>
    <string name="fii_symbol_hint">Ex: HTMX11</string>
    <string name="fixed_type">Type of the fixed income</string>
    <string name="fixed_rentability_type">Rentability type of the fixed income</string>
    <string name="fixed_symbol">Type the label of the fixed income</string>
    <string name="fixed_symbol_hint">Ex: CDB Santander 1</string>
    <string name="fixed_buy_value">Buy total value</string>
    <string name="fund_symbol">Type the label of the fund</string>
    <string name="fund_cnpj">Type the CNPJ of the fund</string>
    <string name="fund_symbol_hint">Type 4 characters for name search</string>
    <string name="fund_cnpj_hint">Ex: 12.345.678/9031-23</string>
    <string name="fund_buy_value">Buy total value</string>
    <string name="treasury_symbol">Treasury Label</string>
    <string name="treasury_symbol_hint">Ex: NTNB 2021</string>
    <string name="faq_resume">
         <b>1 - Meus titulos do tesouro não estão atualizando automaticamente.\n
         2 - Como faço para importar e exportar meus dados para outro ou o mesmo aparelho?\n
         3 - Como vendo, deleto ou edito meus ativos?\n
         4 - De que empresa é o aplicativo?\n
         5 - Porque o aplicativo é pago?\n
         6 - Não achei a solução do meu problema.\n
         7 - Tenho sugestões para o aplicativo.\n</b>
    </string>
    <string name="faq_one">
        <b>\n1 - Meus titulos do tesouro não estão atualizando automaticamente.\n\n</b>

        Para que os seus titulos do tesouro sejam atualizados automaticamente, é necessario que o nome seja exatamente como o sugerido pelo app na hora de inserir.
        Quando começar a digitar o nome, comece por "Tesouro..." que logo o app ira sugerir o nome de todos os titulos disponiveis. Se não encontrar o seu, entre em contato para que possamos adiciona-lo
        Se você inserir por nomes como NTNB 2024 ou LFT 2023, o app não conseguirá pegar as cotações automaticamente, mas você poderá atualiza-las manualmente caso deseje.\n\n
    </string>
    <string name="faq_two">
        <b>\n2 - Como faço para importar e exportar meus dados para outro ou o mesmo aparelho?\n\n</b>

        Todos os seus dados são salvos apenas localmente no seu telefone. Nenhum dado é exportado para nenhum servidor externo na nuvem. Com isso, se você desinstalar o app ou trocar de telefone, os dados não estarão mais lá.
        Para solucionar isso, existe a opção de "Cópia e Restauração" no app no seu menu. Nela você terá as opções:\n\n

        \u2022 Backup: Vai gerar um arquivo com a cópia dos seus dados que será salvo automaticamente no seu Google Drive.\n
        \u2022 Restauração: Abrirá o seu Google Drive, e você poderá usar o arquivo gerado na opção "Backup", com o nome de GIBackup.db, para restaurar seus dados, assim como os salvou.\n\n

        Sugiro que antes de desinstalar o app no aparelho que fez backup, garanta que a restauração funcionou no novo aparelho.\n\n

        Obs: Google Drive é um ambiente do Google onde você pode salvar arquivos na nuvem. Ele é atrelado a sua conta e ninguem mais poderá ver esses dados a não ser você.\n\n
    </string>
    <string name="faq_three">
        <b>\n3 - Como vendo, deleto ou edito meus ativos?\n\n</b>

        Na aba Carteira, Histórico e Rendimentos, serão mostrado as informações dos seus ativos comprados, vendidos e seus rendimentos. Nelas você encontrará desenhos de um mais(+), menos(-), caneta e uma lixeira.
        Cada um desses desenhos são clicáveis e efetuam as operações de comprar, vender, editar e deletar seus ativos e rendimentos respectivos quando clicados.
        Portanto basta clicar neles para efetuar as operções que deseja de seus ativos e rendimentos.\n\n
    </string>
    <string name="faq_four">
        <b>\n4 - De que empresa é o aplicativo?\n\n</b>

        O aplicativo Guia Investimento é feito por um desenvolvedor independente que gosta muito da area de investimento e viu a necessidade de um aplicativo para controlar e ver seus ganhos de sua carteira.
        Sei que ainda tem muitas melhorias e alguns pequenos bugs a serem resolvidos, mas com a sua contribuição e sugestões, aos poucos o aplicativo vai ficando cada vez melhor e com mais funcionalidades.\n\n
    </string>
    <string name="faq_five">
        <b>\n5 - Porque o aplicativo é pago?\n\n</b>

        O desenvolvimento do aplicativo tem um custo mensal moderado para pegar as cotações da Bovespa. Infelizmentea bovespa não oferece um serviço para ler cotações grátis, nem mesmo com atraso de 15 minutos. O custo é relativamente alto para um desenvolvedor independente. Hoje, ainda com as assinaturas ativas, eu ainda estou pagando para manter e desenvolver o app.
        Com isso eu limitei a atualização automática a 5 ações, 3 fundos imobiliarios e 1 tesouro para a versão grátis. Assim, pequenos desenvolvedores conseguem usar o aplicativo sem problema, e conforme forem crescendo, vão poder ter condições de assinar a versão paga e contribuir com o app.\n\n
    </string>
    <string name="faq_six">
        <b>\n6 - Não achei a solução do meu problema.\n\n</b>

        Se você está com algum problema ou duvida no app, e não conseguiu achar a solução, fique a vontade em me mandar um email, tento ajudar assim como eu puder. Normalmente respondo em no máximo 1-2 dias com uma resposta completa de como você poderá resolver seu problema.\n\n

        Entre em contato por: <a href="mailto:contato@guiainvestimento.com.br">contato@guiainvestimento.com.br</a>\n\n
    </string>
    <string name="faq_seven">
        <b>\n7 - Tenho sugestões para o aplicativo.\n\n</b>

        Sugestões são sempre bem vindas. Alias esse Perguntas Frequentes foi feito a partir de uma sugestão de um cliente. Não deixe de entrar em contato para me dizer algo que queira que tenha no app e conversamos se isso será feito em breve.
        Tenho uma lista grande de novidades e melhorias ainda por vir. Mas não deixe de dar sua sugestão que ela poderá ser feita em breve.\n\n
    </string>
</resources>