<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fii_symbol"/>
    <EditText
        android:id="@+id/inputSymbol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fii_symbol_hint" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quantity"/>
    <EditText
        android:id="@+id/inputQuantity"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buy_price"/>
    <EditText
        android:id="@+id/inputBuyPrice"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/percentual_objective"/>
    <EditText
        android:id="@+id/inputObjective"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buy_date"/>
    <EditText
        android:id="@+id/inputBuyDate"
        android:inputType="date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
