<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/fragment_form_margin"
        android:orientation="vertical">

        <TextView
            android:fontFamily="sans-serif-light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fund_symbol"/>

        <AutoCompleteTextView
            android:fontFamily="sans-serif-light"
            android:id="@+id/inputSymbol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fund_symbol_hint"
            android:maxLength="150"/>

        <TextView
            android:fontFamily="sans-serif-light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fund_cnpj"/>

        <AutoCompleteTextView
            android:fontFamily="sans-serif-light"
            android:id="@+id/inputCnpj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fund_cnpj_hint"
            android:inputType="number"
            android:maxLength="30"/>

        <TextView
            android:fontFamily="sans-serif-light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_form_margin_top_subhead"
            android:text="@string/fund_buy_value"/>

        <EditText
            android:fontFamily="sans-serif-light"
            android:id="@+id/inputBuyTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

        <TextView
            android:fontFamily="sans-serif-light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_form_margin_top_subhead"
            android:text="@string/buy_date"/>

        <EditText
            android:fontFamily="sans-serif-light"
            android:id="@+id/inputBuyDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="date"/>
    </LinearLayout>
</ScrollView>