<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/fragment_form_margin"
        android:orientation="vertical">

        <TextView
            android:fontFamily="sans-serif-light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fixed_type"/>

        <Spinner
            android:id="@+id/fixedTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />

        <TextView
            android:fontFamily="sans-serif-light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fixed_rentability_type"/>

        <Spinner
            android:id="@+id/fixedRentabilityTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />

        <TextView
            android:fontFamily="sans-serif-light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fixed_symbol"/>

        <EditText
            android:fontFamily="sans-serif-light"
            android:id="@+id/inputSymbol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fixed_symbol_hint"
            android:maxLength="10"/>

        <TextView
            android:fontFamily="sans-serif-light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_form_margin_top_subhead"
            android:text="@string/fixed_buy_value"/>

        <EditText
            android:fontFamily="sans-serif-light"
            android:id="@+id/inputBuyTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

        <TextView
            android:fontFamily="sans-serif-light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_form_margin_top_subhead"
            android:text="@string/percentual_objective"/>

        <EditText
            android:fontFamily="sans-serif-light"
            android:id="@+id/inputObjective"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="5"
            android:inputType="numberDecimal"/>

        <TextView
            android:fontFamily="sans-serif-light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_form_margin_top_subhead"
            android:text="@string/buy_date"/>

        <EditText
            android:fontFamily="sans-serif-light"
            android:id="@+id/inputBuyDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="date"/>
    </LinearLayout>
</ScrollView>