<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/stock_portfolio_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    app:cardElevation="2dp"
    app:cardCornerRadius="0dp"
    app:cardPreventCornerOverlap="false"
    android:paddingTop="0dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="40dp"
    app:cardUseCompatPadding="false"
    app:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="0dp"
    card_view:cardBackgroundColor="@color/white"
    card_view:cardElevation="2dp"
    android:foreground="?attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/portfolio_bought_label"
            android:gravity="center"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/portfolio_current_label"
            android:gravity="center"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:text="@string/portfolio_appreciation_label"
            android:textSize="14dp"
            android:gravity="center" />
        <TextView
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:text="@string/portfolio_income_label"
            android:gravity="center" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/portfolio_total_gain_label"
            android:gravity="center"
            android:layout_weight="1"/>
    </LinearLayout>
</android.support.v7.widget.CardView>
