<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/fragment_add_stock_margin"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stock_symbol"/>

        <EditText
            android:id="@+id/inputSymbol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0,1,2,3,4,5,6,7,8,9,qwertzuiopasdfghjklyxcvbnm,QWERTZUIOPASDFGHJKLYXCVBNM"
            android:hint="@string/stock_symbol_hint"
            android:inputType="textCapCharacters"
            android:maxLength="6"/>

        <TextView
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_add_stock_margin_top_subhead"
            android:text="@string/quantity"/>

        <EditText
            android:id="@+id/inputQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>

        <TextView
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_add_stock_margin_top_subhead"
            android:text="@string/buy_price"/>

        <EditText
            android:id="@+id/inputBuyPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

        <TextView
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_add_stock_margin_top_subhead"
            android:text="@string/percentual_objective"/>

        <EditText
            android:id="@+id/inputObjective"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

        <TextView
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_add_stock_margin_top_subhead"
            android:text="@string/buy_date"/>

        <!-- Missing date of the buy -->
        <EditText
            android:id="@+id/inputBuyDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="date"/>
    </LinearLayout>
</ScrollView>