<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/fragment_form_margin"
        android:orientation="vertical">

        <TextView
            android:fontFamily="sans-serif-light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/treasury_symbol"/>

        <EditText
            android:fontFamily="sans-serif-light"
            android:id="@+id/inputSymbol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0,1,2,3,4,5,6,7,8,9,QWERTZUIOPASDFGHJKLYXCVBNM"
            android:hint="@string/treasury_symbol_hint"
            android:inputType="textCapCharacters"
            android:maxLength="7"/>

        <TextView
            android:fontFamily="sans-serif-light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_form_margin_top_subhead"
            android:text="@string/quantity"/>

        <EditText
            android:fontFamily="sans-serif-light"
            android:id="@+id/inputQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

        <TextView
            android:fontFamily="sans-serif-light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_form_margin_top_subhead"
            android:text="@string/sell_price"/>

        <EditText
            android:fontFamily="sans-serif-light"
            android:id="@+id/inputSellPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

        <TextView
            android:fontFamily="sans-serif-light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_form_margin_top_subhead"
            android:text="@string/sell_date"/>

        <EditText
            android:fontFamily="sans-serif-light"
            android:id="@+id/inputSellDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="date"/>
    </LinearLayout>
</ScrollView>